--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
   --color-heading: #1a202c;
   --color-heading-black: #000000;
   --color-accent: #d1dce5;
-  --color-primary: #009933;
+  --color-primary: #004D1A;
   --color-text-light: #4f5969;
 
   /* Dark mode colors */
@@ -25,7 +25,7 @@
   --color-heading: #1a202c;
   --color-heading-black: #000000;
   --color-accent: #d1dce5;
-  --color-primary: #009933;
+  --color-primary: #004D1A;
   --color-text-light: #4f5969;
 
   /* Dark mode overrides */
@@ -404,6 +404,14 @@ a:focus {
 }
 
 /* Custom classes */
+.content-wrapper {
+  margin: var(--spacing-6);
+}
+
+.accessibility-wrapper li {
+  margin: var(--spacing-6);
+}
+
 .main-heading {
   font-size: var(--fontSize-7);
   margin: 0;
@@ -451,10 +459,6 @@ a:focus {
   margin-bottom: var(--spacing-0);
   min-width: 50px;
   border-radius: 100%;
-}
-
-.blog-list, .blog-post {
-  margin: var(--spacing-6);
 }
 
 .blog-post header h1 {
