--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -178,6 +178,7 @@ body {
   min-height: 100vh;
 }
 
+/* Navbar styles */
 .navbar {
   position: sticky;
   z-index: 100;
@@ -185,14 +186,16 @@ body {
 
 .custom-navbar-container {
   max-width: none;
-  /* width: calc(100% - 50px); */
   padding-bottom: var(--spacing-2);
-  /* border-bottom: 1px solid var(--color-accent); */
   z-index: 100;
 }
 
 .custom-navbar-container > .navbar-brand {
   margin-left: var(--spacing-4);
+  font-size: clamp(1.25rem, 4vw, 2.5rem);
+  line-height: 1.2;
+  font-weight: var(--fontWeight-bold);
+  color: var(--color-heading);
 }
 
 .custom-nav-links {
@@ -203,9 +206,10 @@ body {
   opacity: 0.8;
   border: 1px solid var(--color-accent);
   border-radius: var(--spacing-4);
+  padding: var(--spacing-2);
 }
 
-.navbar-link, .navbar-link.show {
+.navbar-link {
   text-decoration: none;
   color: var(--color-text) !important;
   font-weight: var(--fontWeight-bold);
@@ -216,7 +220,11 @@ body {
   width: 100px;
 }
 
-.navbar-link:hover, .navbar-link.show:hover {
+.footer-content > .navbar-link {
+  width: fit-content;
+}
+
+.navbar-link:hover {
   color: var(--color-primary);
   background-color: var(--color-accent);
 }
