--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -100,10 +100,9 @@
   font-size: 0.875rem;
   font-weight: bold;
   position: fixed;
-  top: 0;
+  top: 75px;
   left: 0;
   right: 0;
-  z-index: 1000;
   opacity: 0.8;
 }
 
