Style: Follow up styling changes

--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -10,6 +10,13 @@
   opacity: 1;
 }
 
+// Prevent selection
+* {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
 // Box sizing
 *,
 *::after,
