--- a/src/styles/partials/_wordCloud.scss
+++ b/src/styles/partials/_wordCloud.scss
@@ -34,12 +34,7 @@
     cursor: pointer !important;
   }
 
-
-  
-
-
-
-
+/* Frame */
 .outer-border {
 	border: 2px solid #DE9B72;
   height: 99%;
@@ -69,7 +64,7 @@
   background: #ecd26d40;
 }
 
-/* Decorations */
+/* Frame Decorations */
 .vertical-decoration {
 	position: absolute;
 	left: 0;
