--- a/src/styles/partials/_workshop.scss
+++ b/src/styles/partials/_workshop.scss
@@ -11,12 +11,8 @@
 
   > ol > li {
     border-radius: var(--spacing-2);
-    min-width: 150px;
-    width: 25vw;
-    max-width: 275px;
-    height: 125px;
     margin: var(--spacing-2);
-    padding: 2px;
+    padding: var(--spacing-1);
     background-color: #e0e0e0a8;
     border: 2px dashed #ccc;
   }
@@ -34,7 +30,7 @@
 
     div {
       text-align: center;
-      padding: 0;
+      padding: var(--spacing-8);
       margin: 0;
       display: block;
       background-color: var(--color-background);
@@ -44,11 +40,11 @@
       align-content: center;
 
       p {
+        width: 135px;
         font-size: 14px;
         letter-spacing: 0.25em;
         text-align: center;
         text-transform: uppercase;
-        padding: 0;
         margin: 0;
         display: block;
       }
