Updates to styling & nav. Fixes Improve navigation #34

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@
 @use "./partials/_workshop" as *;
 @use "./partials/_wordCloud" as *;
 @use "./partials/_recipe" as *;
+@use "./partials/_sign" as *;
 
 // Layout
 .global-wrapper {
