--- a/src/styles/partials/_blog.scss
+++ b/src/styles/partials/_blog.scss
@@ -1,45 +1,51 @@
 @use "./_variables" as *;
 
 .blog-post {
-    margin-bottom: 95px; // Footer height & under construction banner
-  }
-.blog-post {
-    margin: var(--spacing-0) var(--spacing-4) 95px var(--spacing-4); // Footer height & under construction banner
-  }
+  margin: var(--spacing-0) var(--spacing-4) 95px var(--spacing-4); // Footer height & under construction banner
 
-.blog-post header h1 {
+  header h1 {
     margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
   }
-  
-  .blog-post header p {
+
+  header p {
     font-size: var(--fontSize-2);
     font-family: var(--font-heading);
   }
-  
-  .blog-post-nav ul {
-    margin: var(--spacing-0);
+
+  .row > ul {
+    margin-left: var(--spacing-3);
+    margin-bottom: var(--spacing-2);
   }
+
+  .row > ol {
+    margin-left: var(--spacing-3);
+  }
+}
+
+.blog-post-nav ul {
+  margin: var(--spacing-0);
+}
 
 // Post list item
 .post-list-item {
-    margin-bottom: var(--spacing-8);
-    margin-top: var(--spacing-8);
-  }
-  
-  .post-list-item p {
-    margin-bottom: var(--spacing-0);
-  }
-  
-  .post-list-item h2 {
-    font-size: var(--fontSize-4);
-    color: var(--color-primary);
-    margin-bottom: var(--spacing-2);
-    margin-top: var(--spacing-0);
-  }
-  
-  .post-list-item header {
-    margin-bottom: var(--spacing-4);
-  }
+  margin-bottom: var(--spacing-8);
+  margin-top: var(--spacing-8);
+}
+
+.post-list-item p {
+  margin-bottom: var(--spacing-0);
+}
+
+.post-list-item h2 {
+  font-size: var(--fontSize-4);
+  color: var(--color-primary);
+  margin-bottom: var(--spacing-2);
+  margin-top: var(--spacing-0);
+}
+
+.post-list-item header {
+  margin-bottom: var(--spacing-4);
+}
 
   // Bio
 .bio {
