--- a/src/styles/partials/_wordCloud.scss
+++ b/src/styles/partials/_wordCloud.scss
@@ -1,18 +1,12 @@
 @use "./_variables" as *;
 
 .word-cloud-container {
-    position: fixed;
-    bottom: 60px;
-    left: 0;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 80vh;
   }
   
   .word-cloud {
     width: 100%;
-    margin: var(--spacing-2) 0;
+    height: 95%;
   }
   
   .word-cloud svg {
@@ -37,7 +31,6 @@
 /* Frame */
 .outer-border {
 	border: 2px solid #DE9B72;
-  height: 99%;
   width: 98%;
   padding: 4px;
   margin: 0 auto;
@@ -45,7 +38,6 @@
 
 .mid-border {
   border: 4px solid #DE9B72 ;
-  height: 100%;
   width: 100%;
   padding: 4px;
   margin: auto;
@@ -57,10 +49,7 @@
   flex-direction: column;
 	position: relative;
 	border: 2px solid #DE9B72;
-  height: 100%;
   width: 100%;
-  margin: auto;
-  padding: 25px 0px;
   background: #ecd26d40;
 }
 
@@ -70,24 +59,23 @@
 	left: 0;
 	right: 0;
 	margin: auto;
-	width: 11em;
 }
 
 @media (min-width: 768px) {
 	.vertical-decoration {
-		width: 16em;
+		width: 10em;
 	}
 }
 
 @media (min-width: 992px) {
 	.vertical-decoration {
-		width: 20em;
+		width: 16em;
 	}
 }
 
 @media (min-width: 1200px) {
 	.vertical-decoration {
-		width: 27em;
+		width: 20em;
 	}
 }
 
