IMP Font update to Poiret One

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -40,7 +40,7 @@
   --spacing-32: 8rem;
 
   /* Typography */
-  --fontFamily: 'Josefin Slab', serif;
+  --fontFamily: "Poiret One", sans-serif;
   --font-body: var(--fontFamily);
   --font-heading: var(--fontFamily);
   --fontWeight-normal: 400;
