IMP: Update to Emerald Spark, new footer tag line, reword to nav & updated construction sign

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -29,6 +29,13 @@ footer {
       margin-right: var(--spacing-3);
     }
 
+    &-center {
+      margin: auto;
+      font-size: var(--fontSize-2);
+      font-weight: var(--fontWeight-boldish);
+      color: var(--color-text);
+    }
+
     > div {
       display: flex;
 
