--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,7 @@
   flex-direction: column;
   position: relative;
   margin-top: 100px; // Navbar height
+  margin-bottom: 60px; // Footer height
 }
 
 // Accessibility wrapper
