--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -44,6 +44,7 @@
   --font-body: var(--fontFamily);
   --font-heading: var(--fontFamily);
   --fontWeight-normal: 400;
+  --fontWeight-boldish: 500;
   --fontWeight-bold: 700;
   --fontWeight-black: 900;
   --fontSize-root: 16px;
