--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -10,6 +10,7 @@
 
   .custom-navbar-container {
     max-width: none;
+    padding-top: var(--spacing-2);
     padding-bottom: var(--spacing-2);
     z-index: 100;
 
@@ -30,11 +31,9 @@
   .custom-nav-links {
     text-align: center;
     position: absolute;
-    right: 0;
+    right: 10px;
     background-color: var(--color-background);
     opacity: 0.8;
-    border-left: 1px solid var(--color-accent);
-    border-bottom: 1px solid var(--color-accent);
     border-bottom-left-radius: var(--spacing-4);
     padding: var(--spacing-2);
   }
