--- a/src/styles/partials/_workshop.scss
+++ b/src/styles/partials/_workshop.scss
@@ -27,6 +27,7 @@
   .workshop-link, .workshop-link-disabled {
     width: -webkit-fill-available;
     height: -webkit-fill-available;
+    max-height: 100px;
     display: block;
     text-align: center;
     align-content: center;
@@ -48,6 +49,7 @@
       text-align: center;
 
       p {
+        color: var(--color-text);
         width: 135px;
         font-size: 14px;
         letter-spacing: 0.25em;
@@ -55,7 +57,7 @@
         text-transform: uppercase;
         margin: 0;
         display: block;
-      text-align: center;
+        text-align: center;
       }
     }
 
@@ -66,6 +68,16 @@
 
     &.workshop-link-disabled div p {
       cursor: default;
+    }
+  }
+
+  .workshop-link-disabled {
+    div {
+      background-color: var(--color-accent-light);
+
+      p {
+        color: var(--color-text-light);
+      }
     }
   }
 }
