--- a/src/styles/partials/_wordCloud.scss
+++ b/src/styles/partials/_wordCloud.scss
@@ -23,21 +23,21 @@
   }
   
   .word-cloud text:hover {
-    fill: #DE9B72 !important;
-    text-shadow: 0 0 5px #DE9B72;
+    fill: var(--color-primary) !important;
+    text-shadow: 0 0 5px var(--color-primary);
     cursor: pointer !important;
   }
 
 /* Frame */
 .outer-border {
-	border: 2px solid #DE9B72;
+	border: 2px solid var(--color-primary);
   width: 98%;
   padding: 4px;
   margin: 0 auto;
 }
 
 .mid-border {
-  border: 4px solid #DE9B72 ;
+  border: 4px solid var(--color-primary);
   width: 100%;
   padding: 4px;
   margin: auto;
@@ -48,44 +48,7 @@
   justify-content: center;
   flex-direction: column;
 	position: relative;
-	border: 2px solid #DE9B72;
+	border: 2px solid var(--color-primary);
   width: 100%;
-  background: #ecd26d40;
-}
-
-/* Frame Decorations */
-.vertical-decoration {
-	position: absolute;
-	left: 0;
-	right: 0;
-	margin: auto;
-}
-
-@media (min-width: 768px) {
-	.vertical-decoration {
-		width: 10em;
-	}
-}
-
-@media (min-width: 992px) {
-	.vertical-decoration {
-		width: 16em;
-	}
-}
-
-@media (min-width: 1200px) {
-	.vertical-decoration {
-		width: 20em;
-	}
-}
-
-.vertical-decoration.top {
-	top: 0;
-
-}
-
-.vertical-decoration.bottom {
-	bottom: 0;
-	-webkit-transform: scaleY(-1);
-  	transform: scaleY(-1);
+  background: var(--color-accent-light);
 }
