Amends: Updates to navigation, dark mode, mobile displays for quick nav & updates to misc styles

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@
 @use "./partials/_wordCloud" as *;
 @use "./partials/_recipe" as *;
 @use "./partials/_sign" as *;
+@use "./partials/_quickNav" as *;
 
 // Layout
 .global-wrapper {
