--- a/src/styles/partials/_wordCloud.scss
+++ b/src/styles/partials/_wordCloud.scss
@@ -33,7 +33,7 @@
 	border: 2px solid var(--color-primary);
   width: 98%;
   padding: 4px;
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
 }
 
 .mid-border {
