--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -10,20 +10,20 @@
 
   .custom-navbar-container {
     max-width: none;
+    height: 100px;
     padding-top: var(--spacing-2);
     padding-bottom: var(--spacing-2);
     z-index: 100;
 
-    > .navbar-brand {
-      margin-left: var(--spacing-4);
-      padding-top: var(--spacing-2);
-      font-size: clamp(1.25rem, 4vw, 2.5rem);
-      line-height: 1.2;
-      font-weight: var(--fontWeight-bold);
-      color: var(--color-heading);
-      
-      .main-heading {
-        margin: 0;
+    .main-heading {
+      margin: 0;
+      text-decoration: none;
+
+      h1 {
+        font-size: "200%";
+        padding-left: 15px;
+        font-weight: var(--fontWeight-bold);
+        color: var(--color-heading);
       }
     }
   }
@@ -36,34 +36,36 @@
     opacity: 0.8;
     border-bottom-left-radius: var(--spacing-4);
     padding: var(--spacing-2);
+
+    .dark-mode-toggle {
+      width: 38px; 
+      padding: 4px 8px;
+    }
   }
 
   .navbar-link,
   .navbar-link-disabled {
     transition: all 0.3s ease;
-    
-    &:hover {
-      transform: translateY(-2px);
-      color: var(--color-primary) !important;
-    }
-    
-    &:active {
-      transform: scale(0.95);
-      color: var(--color-primary) !important;
-    }
     text-decoration: none;
     font-weight: var(--fontWeight-bold);
     padding: var(--spacing-2) var(--spacing-4);
     margin: var(--spacing-2);
     border-radius: var(--spacing-2);
+    border: none;
     background-color: var(--color-accent-light);
+    
+    &:active {
+      transform: scale(0.95);
+      color: var(--color-primary) !important;
+    }
 
     &.navbar-link {
       color: var(--color-text) !important;
       transition: color 0.2s ease, background-color 0.2s ease;
 
       &:hover {
-        color: var(--color-primary);
+        transform: translateY(-2px);
+        color: var(--color-primary) !important;
         background-color: var(--color-accent);
       }
     }
