--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -19,6 +19,12 @@
   --color-highlight: #2E8552;       /* Emerald for hover states, active buttons */
   --color-accent-highlight: #B2F2BB; /* Mint for badges, small accents */
 
+ /* Overwrite Bootstrap variables */
+ --bs-primary-bg-subtle: #d9f0dc;
+ --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 225, 253, 0.25) !important;
+ --bs-primary-text-emphasis: #003366;
+
+
   /* Max widths */
   --maxWidth-none: "none";
   --maxWidth-xs: 20rem;
