--- a/src/styles/partials/_workshop.scss
+++ b/src/styles/partials/_workshop.scss
@@ -15,8 +15,8 @@
     border-radius: var(--spacing-2);
     margin: var(--spacing-4);
     padding: var(--spacing-1);
-    background-color: #e0e0e0a8;
-    border: 2px dashed #ccc;
+    background-color: #cae0c7a8;
+    border: 2px dashed #b9cfc3;
 
     > div > p {
       width: -webkit-fill-available;
@@ -42,7 +42,7 @@
       margin: 0;
       display: block;
       background-color: var(--color-background);
-      border: 2px dashed #ccc;
+      border: 2px dashed #b9cfc3;
       border-radius: 2px;
       height: 100%;
       align-content: center;
