Imp Image toggle and fish guide

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -23,6 +23,7 @@
  --bs-primary-bg-subtle: #d9f0dc;
  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 225, 253, 0.25) !important;
  --bs-primary-text-emphasis: #003366;
+ --bs-link-color: #2E8552;
 
 
   /* Max widths */
